--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -193,7 +193,7 @@
       <item row="0" column="0">
        <widget class="QPushButton" name="setDate">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="styleSheet">
          <string notr="true"/>
@@ -213,7 +213,7 @@
       <item row="0" column="2">
        <widget class="QPushButton" name="resetid">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>重置用户ID</string>
@@ -265,7 +265,7 @@
       <item row="2" column="1">
        <widget class="QPushButton" name="restart">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>重启</string>
@@ -275,7 +275,7 @@
       <item row="2" column="2">
        <widget class="QPushButton" name="setID">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>设置用户ID</string>
@@ -292,7 +292,7 @@
       <item row="3" column="0">
        <widget class="QPushButton" name="AdjustChip">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>芯片校准</string>
@@ -302,7 +302,7 @@
       <item row="3" column="1">
        <widget class="QPushButton" name="erase_chip">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>擦除FLASH</string>
