--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1500</width>
+    <width>900</width>
     <height>759</height>
    </rect>
   </property>
@@ -18,13 +18,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>1500</width>
+    <width>900</width>
     <height>759</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1500</width>
+    <width>900</width>
     <height>759</height>
    </size>
   </property>
@@ -93,22 +93,15 @@
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>580</x>
+       <x>250</x>
        <y>20</y>
-       <width>192</width>
-       <height>151</height>
+       <width>171</width>
+       <height>101</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <widget class="QDateEdit" name="total_step_time"/>
-      </item>
-      <item>
-       <widget class="QPushButton" name="updateRun">
-        <property name="text">
-         <string>同步跑步数据</string>
-        </property>
-       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="updateWalk">
@@ -129,8 +122,8 @@
     <widget class="QLabel" name="conn_label">
      <property name="geometry">
       <rect>
-       <x>810</x>
-       <y>40</y>
+       <x>290</x>
+       <y>150</y>
        <width>131</width>
        <height>21</height>
       </rect>
@@ -150,43 +143,13 @@
       <string>连接断开......</string>
      </property>
     </widget>
-    <widget class="QRadioButton" name="namefilter">
-     <property name="geometry">
-      <rect>
-       <x>800</x>
-       <y>80</y>
-       <width>221</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>微软雅黑</family>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="acceptDrops">
-      <bool>false</bool>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color:rgb(255, 0, 0)</string>
-     </property>
-     <property name="text">
-      <string>扫描Odun_xxxx</string>
-     </property>
-     <property name="checked">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>20</y>
-       <width>531</width>
-       <height>161</height>
+       <width>201</width>
+       <height>151</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
@@ -203,30 +166,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="battery">
-        <property name="text">
-         <string>电池电量</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="resetid">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>重置用户ID</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="3">
-       <widget class="QPushButton" name="getalgoparam">
-        <property name="text">
-         <string>获取算法参数</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="getdata">
         <property name="text">
@@ -234,45 +173,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="breakdown">
-        <property name="text">
-         <string>硬件检测</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QPushButton" name="getuserid">
-        <property name="text">
-         <string>获取用户ID</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QPushButton" name="restart_record">
-        <property name="text">
-         <string>获取重启记录</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="version">
-        <property name="text">
-         <string>获取版本号</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="restart">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>重启</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
+      <item row="0" column="1">
        <widget class="QPushButton" name="setID">
         <property name="enabled">
          <bool>true</bool>
@@ -282,51 +183,24 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="3">
-       <widget class="QPushButton" name="wave">
+      <item row="1" column="1">
+       <widget class="QPushButton" name="getuserid">
         <property name="text">
-         <string>绘制波形</string>
+         <string>获取用户ID</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="AdjustChip">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="bridge_start">
         <property name="text">
-         <string>芯片校准</string>
+         <string>透传模式</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
-       <widget class="QPushButton" name="erase_chip">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="terminal_mode">
         <property name="text">
-         <string>擦除FLASH</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QPushButton" name="StopDrawWave">
-        <property name="text">
-         <string>绘制波形停止</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QPushButton" name="RT_END">
-        <property name="text">
-         <string>实时模式结束</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QPushButton" name="RT_START">
-        <property name="text">
-         <string>开启实时模式</string>
+         <string>终端模式</string>
         </property>
        </widget>
       </item>
@@ -389,8 +263,8 @@
      <rect>
       <x>420</x>
       <y>220</y>
-      <width>1061</width>
-      <height>251</height>
+      <width>451</width>
+      <height>451</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -406,35 +280,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>490</y>
-      <width>1061</width>
-      <height>201</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_5">
-     <item>
-      <widget class="QListWidget" name="mac_list"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="savemac">
-       <property name="text">
-        <string>保存MAC地址到文件</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1500</width>
+     <width>900</width>
      <height>23</height>
     </rect>
    </property>
