--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -280,6 +280,19 @@
      </item>
     </layout>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>680</y>
+      <width>281</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>liklon玩GD32F350 针对智能跑鞋的蓝牙基站</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
