add battle rope command

--- a/ble_tools/ble_tools.ui
+++ b/ble_tools/ble_tools.ui
@@ -330,6 +330,20 @@
         </property>
        </widget>
       </item>
+      <item row="4" column="2">
+       <widget class="QPushButton" name="rp_start">
+        <property name="text">
+         <string>战斗绳开始</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="3">
+       <widget class="QPushButton" name="rp_end">
+        <property name="text">
+         <string>战斗绳结束</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </widget>
